Add quickmark for South Park random episode

--- a/web/firefox.org
+++ b/web/firefox.org
@@ -95,6 +95,7 @@
    quickmark i https://is.muni.cz/auth/student
    quickmark c https://calendar.google.com
    quickmark g https://github.com/kuhy
+   quickmark s https://www.southparkstudios.com/random-episode
    #+END_SRC
 
    Load theme.
