Indent code snippets

--- a/secrets.org
+++ b/secrets.org
@@ -8,25 +8,25 @@
   :END:
 -----BEGIN PGP MESSAGE-----
 
-hQIMAzw/GyStS24+AQ//cu+69MfTa+ceAmqdYpyqy7QGX826f9nsX8g+80ovjLXB
-1zw5c1tq2TGoQzqL0upkhfcQ5Z+oAuphB9xRp76H0ZBEwLysILTGjDj2UJ3fLvwp
-GEYhyc+MqC+jMsSUZhkZFc2IjiXWLlHJbClJPoxel6Q8npH+Z8Pra9NE5HWScc8U
-FboaPNzwPcG7PoFqrIOB52npZfS0qJlYdMLS75c+c7waccMQ5gIA7AXA47/SPurM
-SvCLYKJei8SjkHjEOsgsDpjLbBbCgT7AsEFFFlOgA6hYVisZqamH+soNGvSU6SJz
-ftkdyj5fV5qNaniXskv8r603hA9okttB7/Cchf5KdQejpajjdnvAfdygZ5pN2HPG
-kv11gHveGe5P/k2g1F4JpjSW6ImouW5sSosdl6oYB6U/vmzXrV+duFO9VRrrRsMH
-U398nZbmSTxaw1ab5nocNQPDa5P7nBA+FrinjSl96jL2R87MNP784NgRTfU/3Dxm
-lJy4F5HX08DhiMoHa1t3OQFlqgbXceMry/DtxUIZMussnpRPaJmjSHwsOYG/EoAS
-jtbo8r8+gc1TNE6cbPLZnR+27Nzf5++AoMnBuBJM3mQb/P/JYcD92PorsDk3p16D
-pHBv3zesVSaItGSIw8PLXdnIHI08a+9UiHufNBiCpgQVSS4Zkqap/lSbMrRfk4DS
-wHQBucNXupzLl0S7ZyIdjopfoAPur8b/ocaK0YTQDXBoyYKOF+zRMAH+C9erThEr
-QYF7Oiw0b6PqWXha1l7BSYl318EqqpmL1/uyHobfkPeU78bdTfNedm1ukls6+ZnI
-VH65hjc8D67Jfksqj7FqKnLCVnn7kdUB/IVSs6BkX5mHI5IZYNSXo7rwTK00z1Sg
-zmTC1RV+APIz6elIcaSh1wyxjI8d+tCsrKtVFBhkPwoLKVjbuna1FpMyvrX2niUr
-D7jtBwIjxj9OfEkeMuPKgdk8vU4+QT9+78Lb1SDzuL4c3UI55EYKGS7eb/jDxdJ/
-9NaWEnvmmaGsN5cLxrppKa1F7kZZnz5UpIPpLXPfj9lTvjSdImAwhP/PmySu3txX
-whxrIGHik6qqWaxyaGnUBayJOrF8Fg==
-=rZ2I
+hQIMAzw/GyStS24+AQ/9EuUTRUEK7fsqs40/AZ03UaLZRQQLvzXTRF7rG+9R4rKn
+6vX8Lg6oTBlaeaS1ETRACHoGYju3QJkQWUvBtjiBe1G/4rdZKmrvsMJmb+ck6FGL
+24mz8kD4WtlAxgZQrJEWjUuUYlgz2YGmyagxRmQpu/p88VzmPIpd/dmW6bRUDfL7
+AvuVubPqOTAWFYCjHVyfnlhLDS2c2O6EzF+g3yoPN+Lk0D52VNOMvbb3tJhDHPZo
+YL6Og/az0sc0N90lAHL7UHsnnrHPjDK4fUpGSIzdnNGYAS2lVTugnvLWs3oCUxfM
+ce6iKB0qF3+2996AqnbIvCjoDB6khUStYaA4oKvZ8geB9mZueFbNXwS0TXWhjbnD
+gZz1593AFoo5mE9WpQC+OQ3lFPwWvWqlVzDxoqaS/jaKZsJCKdTheKFsmOGL/wPh
+p+emNuV3IUk0XUtqQett/YhxRT2dbkruxKj3InZg2ZJCv13fCGAZe95bAnNJwSAd
+Ehr6v8QixjBVgDIdeZxcaJT30yXbtkoqMi43z1aOC5GQeIW82aAbxOgpyy49ATv3
+CL01zAvXX/7vMywKc7yKViiuBUx2+pFJ485vkx+sot95gRr8fJ6WN8FDFZETndOV
+DCZWQxgH8zLSZy6fvWgJ/9LSCa4jBm57zmHzYeHFOWYtDSuwvqOd0hT7HJ0vIujS
+wHcBzDYW+niIXMmgREpJd382/pphccwZoBIxsCCaFZsCMUGBtXGDci4grUjBb8On
+0aqkvq9of0UNhn9VOvBnPqjFFV6S7BdkYEN6hZ0JZIPzWQkKo+ULhZtkRivwJFU+
+mHpUBeLi8upiAehTGQ7xf/G+H+dnBLj3v0Jl1a+g9k5yNyR1wPmEdqQRuIwL79k+
+8IJnBQecq6RCPEQ3ZhWIp/Z/6Ltp8vukpK5naF+F8HZ4nom2bLpTo4pjQX1vkBgE
+wDo2rbeH7oqPLRHnKmpr268/GFHcIVhuMkrwn/mpb1IcBUQgQApCGlgthyaNgyvE
+oc+DwrQli2wGtzoIwTEkyc4ylJ8Tp34cuxkYlMIxtWFhpbXxXyK+vgE4XzCnSBF6
+N0D4tpWZk0zmRStAl4FDen9KWt82kvKv8w==
+=BnvM
 -----END PGP MESSAGE-----
 * Credentials :crypt:
   :PROPERTIES:
@@ -34,20 +34,20 @@ whxrIGHik6qqWaxyaGnUBayJOrF8Fg==
   :END:
 -----BEGIN PGP MESSAGE-----
 
-hQIMAzw/GyStS24+AQ//VdW6+Xs7Xp0OxHnS9wO3i36U+/rhjIL4H08up7NnvNDM
-lBu1u62oVF2zm7CAAVaKS0UQ0RZlVqpfoH2asRgHNl1YNBEaEbXIdvRCNqnVVLe4
-O9Cxfbc03+qZmHF9xz1k2fuRiYjxK9cHR88RJyaYHi9ggLQ3oAfzwNuFDva1xV23
-3X6QDcSzasl5ANNwVhoFyxWiHtLgeHjdQz0rpwLmdVpYN3glMg+xWLDLd+rVIQAL
-W24U1ZsWhPzjBaCTHVJ/Uhs/ceVKLOZF5YFTsQ3b5KNZ+n/e+NkgQL4TJuDnaEZY
-fFwqgdR/sQrLAvmA23oQD83YqNhMlB/h5MEWcy5d1/UZYmOACrOX2AMpBsdyjlWT
-lGtarL1EFpuZJW/YherLsAMmzTbBkZt6Cc2q6caKncBCUixc37UgtXPuGy7LdyuS
-Fir82bG/4Ydf6/3emQZdz+f156MggkbnrUVMmwf69t1WVts5NDFQsEdc7Semv/8o
-K30FcfNkChy25AuCcH7/a/uhd8e8nnlu3SCdALwZQ1Gdr/BivkLksj1chpsFina3
-QS8PGbmTVXHAf/W1CNEkUv+rTS3rsBANfwFCYZiCOIlipod2R55NMr8QqhV6LDru
-38LcUClDJ/ZSHXFuKXgkV9hEp+5kKhoYkTAw/SWZ0pKZr3iUQ1Xu5LLEf32vAVjS
-twFbRgd4IXbY5cNGq9uNg4Kga1/FAbcplDaiMb+CL1mg7tPJVYP9iq0YGSQ2Uf7R
-hEZEH/ya8gk7SwhVI8jkXCabM1uev7iYQtfwRbF+Q7uwKZFDXvjPGDXadRYne44n
-gmqFu84wBZOSW6mAdU6vd6IWCcF7lngQ3wRezHXjzKrCE8YsnUv/4E8SDrpsbBll
-uUW9dM6dnvufs9/TZU90eJ71/TMRfMwHM1hvNqmVoCS7680+L+uDgg==
-=vuJR
+hQIMAzw/GyStS24+AQ/7BxK0Zed1deM9dXQJjFeua4DalN0DCPH03azA/wXHhtJ+
+lD/R//hxGbEVZvO/OChESHqJZm48OSg9QAzQHh1VNuP2VRJe90clGSOY7IdgFST0
+20PWpFZ9J/XutOuIPWtz4EAt7uiqyprH9yxdEmQXbAV6etaV7uEThxQCU0+DX+Ct
+FhXWaKtIMtXasGY5t7LcjpgP6if6HAWftX/IH4j0+PPQk0J/RVtblNGi4pwDPqXO
+nZxjOTkzg1ZPXO6bg0jCQDgkmnTVJVcvBhPWjpsgtGG/pe8o3pWT9JWgFwngvBpv
+o8DSyWHZcaxTtFd/6o2nOsLOol1HgYVqkeKg1vLPE+v7klcdz9YKQBg7KP1vpe9U
+RtiEwwn4D3uyhi4totxgneYZZgeUTqHu8Slsr546ou85kMy2V5H6WkwlFd7pYOc0
+LzflaeVPPsRGVQRO8dbm3ujwSo1JNFZ+GuBDjpWwAH8sh7rrpQXri4SDg/glArM6
+kz97ijO63s3BicqG4Y2jb7fpC/z1shnND7+sbdbPZjTSvudikf72Uen9AkA38O3A
+dPy3vdoDaYF1XoFbEE3TFrum8DiWR+dGzMnEy3JcoGmNq9p1PRMnjbP913iRrKFy
+eeuwaM5viOEca+julf4oi9u3DhHJPsN0cbDtCFvuv2pcuuEjuV5Xp8RRt8VAvvbS
+uQH25TFforC0VvlCkZNUF/e8LuHhLmX3Yz5A3kg6R5YcuLmc/TbAOqrCEx+fvout
+MYZDir9z3zKA7lbXyQyUhBJmCqa+M7GgxNrFsm15om4nx2vYMT5pRavBRDff8vyR
+mq0bBi2+hX+LTw9vcH3itGLScFQxnacMitUe0QL5dUA5nN61HDV0R4+esNzRYTzp
+aryO6oOGLWVRZsV6QWxI1V+VZnc3MAFqN/6ZGk6LtakOHJCXoRFAIWXC
+=OlxK
 -----END PGP MESSAGE-----
