--- a/README.org
+++ b/README.org
@@ -8,6 +8,8 @@
     - [[file:editor/editorconfig.org][EditorConfig]]
     - [[file:editor/emacs.org][Emacs]]
     - [[file:editor/idea.org][IntelliJ IDEA]]
+  - Image
+    - [[file:image/imv.org][imv]]
   - Music
     - [[file:music/beets.org][beets]]
     - [[file:music/mopidy.org][Mopidy]]
