--- a/wm/sway.org
+++ b/wm/sway.org
@@ -31,6 +31,7 @@
     input * {
         xkb_layout cz
         xkb_variant coder
+        xkb_numlock enabled
         xkb_options ctrl:nocaps,compose:rctrl
   #+END_SRC
 
